Added Movement component class. Input Mapped.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Map/Game_Level_One.Game_Level_One
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Map/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Map/Game_Level_One.Game_Level_One
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BP_PlatformGameMode.BP_PlatformGameMode_C
 GlobalDefaultServerGameMode=None
